[gd_scene load_steps=2 format=3 uid="uid://oskt4euxjg3l"]

[ext_resource type="Script" path="res://scenes/menus/optionSetting.gd" id="1_53fs5"]

[node name="optionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="optionSetting" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("1_53fs5")

[node name="resolutionList" type="OptionButton" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="scaleBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="scalingSlider" type="HSlider" parent="HBoxContainer/optionSetting/scaleBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = 50.0
max_value = 200.0
step = 5.0
value = 100.0
ticks_on_borders = true

[node name="scalingLabel" type="Label" parent="HBoxContainer/optionSetting/scaleBox"]
layout_mode = 2
text = "100% - 1920x1080"

[node name="fullscreenCheckBox" type="CheckBox" parent="HBoxContainer/optionSetting"]
layout_mode = 2
text = "Fullscreen"

[node name="shadowToggle" type="CheckButton" parent="HBoxContainer/optionSetting"]
layout_mode = 2
text = "Shadows OFF/ON"

[node name="ssaoToggle" type="CheckButton" parent="HBoxContainer/optionSetting"]
layout_mode = 2
text = "SSAO OFF/ON"

[node name="glowToggle" type="CheckButton" parent="HBoxContainer/optionSetting"]
layout_mode = 2
text = "Glow OFF/ON"

[node name="backButton" type="Button" parent="HBoxContainer/optionSetting"]
layout_mode = 2
text = "Back"

[connection signal="item_selected" from="HBoxContainer/optionSetting/resolutionList" to="HBoxContainer/optionSetting" method="_on_resolution_list_item_selected"]
[connection signal="value_changed" from="HBoxContainer/optionSetting/scaleBox/scalingSlider" to="HBoxContainer/optionSetting" method="_on_scaling_slider_value_changed"]
[connection signal="toggled" from="HBoxContainer/optionSetting/fullscreenCheckBox" to="HBoxContainer/optionSetting" method="_on_fullscreen_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/optionSetting/backButton" to="HBoxContainer/optionSetting" method="_on_back_button_pressed"]
